--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script async src="build/js/main.js"></script>
     <meta name="description" content="description">
     <meta name="keywords" content="keywords">
-    <meta name="theme-color" content="#db5945">
+    <meta name="theme-color" content="#002083">
 </head>
 
 <body>
