--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <!-- /bl-cat -->
-            <div class="bl-sale d-none">
+            <div class="bl-sale ">
                 <div class="container">
                     <div class="title-sale">
                         <h2>MẪU XE FORD ĐANG BÁN CHẠY</h2>
@@ -395,7 +395,7 @@
                 </div>
             </div>
             <!-- /bl-sale -->
-            <div class="bl-info d-none">
+            <div class="bl-info ">
                 <div class="container">
                     <div class="box-info">
                         <div class="row">
@@ -478,7 +478,7 @@
                 </div>
             </div>
             <!-- /bl-news -->
-            <div class="bl-news d-none">
+            <div class="bl-news">
                 <div class="container">
                     <div class="title-news">
                         <span>TIN TỨC XE FORD</span>
