--- a/index.html
+++ b/index.html
@@ -1,24 +1,112 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <style>
-        h1 {
-            text-align: center;
-        }
-        .box {
-            width: 1000px;
-            margin: auto;
-        }
-    </style>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Hồ sơ xin việc - Civi Phan Trọng Đại</title>
+    <meta name="description" content="Hồ sơ xin việc Phan Trọng Đại" />
+    <link rel="stylesheet" href="/dist/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=vietnamese" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="box">
-        <h1>Tạm ngừng !</h1>
-  </div>
+    <div id="wrapper">
+        <header>
+            <div id="bl-header">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-3 col-lg-3 col-sm-4 col-5">
+                            <div id="image-info">
+                                <img src="asset/img/phandai.jpg" alt="Hồ sơ xin việc Phan Trọng Đại">
+                            </div>
+                        </div>
+                        <div class="col-xl-9 col-lg-9 col-sm-8 col-7">
+                            <div id="box-info">
+                                <h1>PHAN TRỌNG ĐẠI</h1>
+                                <p>Lập trình website </p>
+                                <p><i class="fas fa-mobile"></i> 0899.202.983 </p>
+                                <p><i class="fas fa-envelope"></i> dev.phandai@gmail.com</p>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="bl-history bg-gray">
+                <div class="container">
+                    <div class="bl-head">
+                        <h2><i class="fas fa-user-tie fa-lg"></i> THÔNG TIN CÁ NHÂN :</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-sm-6 col-12">
+
+                            <ul>
+                                <li><i class="fas fa-arrow-circle-right"></i> Họ và tên : <span>Phan Trọng Đại
+                                    </span></li>
+                                <li><i class="fas fa-arrow-circle-right"></i> Năm sinh : <span>01/02/93</span></li>
+                                <li><i class="fas fa-arrow-circle-right"></i> Địa chỉ : <span>Khối yên vinh - P.Hưng
+                                        phúc - Tp.Vinh</span></li>
+                            </ul>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-sm-6 col-12">
+
+                            <ul class="float-right">
+                                <li><i class="fas fa-arrow-circle-right"></i> 2011 - 2013 : <span>Học cấp 3 tại
+                                        Hà Nội</span></li>
+                                <li><i class="fas fa-arrow-circle-right"></i> 2013 - 2015 : <span>Học đại học
+                                        công nghiệp việt trì</span></li>
+                                <li><i class="fas fa-arrow-circle-right"></i> 2015 - 2017 : <span>Học đại học công
+                                        nghiệp trà
+                                        vinh </span></li>
+                                <li><i class="fas fa-arrow-circle-right"></i> 2017 - đến nay : <span>Học và đi
+                                        làm lập trình PHP </span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bl-skill">
+                <div class="container">
+                    <div class="bl-head">
+                        <h2><i class="fas fa-user-graduate"></i> Kỹ năng :</h2>
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-sm-6 col-12">
+                                <ul>
+                                    <li><i class="fas fa-star"></i> FONT-END : <span>HTML / CSS / JQUERY / SCSS /
+                                            BOOTSTRAP / GIT</span></li>
+                                    <li><i class="fas fa-star"></i> BUILD : <span>SEMANTIC WEB / SEO FRIENDLY</span></li>
+                                </ul>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-sm-6 col-12 ">
+                                <ul class="float-right">
+                                    <li><i class="fas fa-star"></i> BACK END : <span>PHP / LARAVEL / CODEIGNITER</span></li>
+                                    <li><i class="fas fa-star"></i> SERVER : <span> SETTINGS SERVER NGINX / APACHE
+                                        </span></li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bl-demo">
+                <div class="container">
+                    <div class="bl-head">
+                        <h2><i class="fab fa-pagelines"></i> SẢN PHẨM :</h2>
+                        <div id="demo">
+                            <b>#WEB CODE LARAVEL/SCSS/NGINX</b> <a href="https://oneford.vn">https://oneford.vn</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
